--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha1
  	- Updated SQL to latest version
  	- Moved Album art out of the album table into album_data 
  	- Changed Browsing Method and default playlist method
  	- Added Play links for Favorite Artists/Albums/Songs
  	- Fixed an issue with the random album selection that was causing
		a full table scan, which could lead to poor performance
		with large databases
  	- Start of Complete rewrite, config file format changed, requires
		manual re-creation of /config/ampache.cfg.php
	- Updated French and German translations
  	- Added min song count to Browse Artist, refercing min object count
		preference
  	- Fixed ratings so that it shows your rating if you've rated it
		otherwise it shows an average rating
  	- Fixed Democratic Play newest votes of same total count first
		(Order by vote time)
	- Fixed a problem where config re-gen wouldn't update the current
		version
	- Changed database to fix some user tracking issues
	- Added date to user_vote to allow for sorting by vote date on 
		democratic play
	- Added Label, Catalog # and Language to song extended data table

--------------------------------------------------------------------------
  v.3.3.3 01/26/2007 
	- Updated the SQL file for stable release
	- Fixed an issue with having db album art method always returning
		true and returning a non-array
	- Fixed a race condition with downsampling and transcoding
	- Fixed some refresh issues on the localplay page
	- Fixed a redirect to a blank page if you hit play selected when
		nothing was selected (Thx Chenb)
	- Added detection of old config files, message displayed to admins
		upon login
	- Fixed an issue with WMP11 and Lock Songs that prevented playback